tests/compile/shader_modules/mesh_shading_combinator.gcc.stderr
In file included from include/rcgp-meta.hpp:8,
                 from include/rcgp.hpp:4,
                 from tests/compile/shader_modules/mesh_shading_combinator.cpp:1:
include/meta/combinators.hpp: In instantiation of 'auto rcgp::MeshShadingCombinator::operator()(TaskShader&, MeshShader&, FragmentShader&) const [with TaskShader = rcgp::shader_stage<rcgp::ShaderStage::eVertex, void, rcgp::write_only_intrinsic<rcgp::SystemValue::eClipPosition, rcgp::ShaderStage::eVertex, rcgp::vector<float, 4> > >; MeshShader = rcgp::shader_stage<rcgp::ShaderStage::eMesh, rcgp::MeshletPayload<rcgp::MeshPrimitive::eTriangles, 64, 126, MeshOutputs>, rcgp::TaskPayload<rcgp::vector<float, 3> >, rcgp::WorkGroup<1, 1, 1> >; FragmentShader = rcgp::shader_stage<rcgp::ShaderStage::eFragment, rcgp::vector<float, 4>, rcgp::vector<float, 3> >]':
tests/compile/shader_modules/mesh_shading_combinator.cpp:44:4:   required from here
   40 |         auto pipeline = MeshShadingCombinator {
      |                         ~~~~~~~~~~~~~~~~~~~~~~~
   41 |                 .device = device,
      |                 ~~~~~~~~~~~~~~~~~
   42 |                 .compiler = compiler,
      |                 ~~~~~~~~~~~~~~~~~~~~~
   43 |                 .render_state = rs,
      |                 ~~~~~~~~~~~~~~~~~~~
   44 |         } (vs, ms, fs);
      |         ~~^~~~~~~~~~~~
include/meta/combinators.hpp:206:31: error: static assertion failed: mesh-shading combinator: arg@0 is not a task shader
  206 |                 static_assert(is_task, "mesh-shading combinator: arg@0 is not a task shader");
      |                               ^~~~~~~
include/meta/combinators.hpp:206:31: note: 'is_task' evaluates to false
include/meta/combinators.hpp:213:39: error: static assertion failed: mesh-shading combinator got incompatible task and mesh payloads:
    task shader emits: void
    mesh shader expects: f32[3]
  213 |                         static_assert(false, payload);
      |                                       ^~~~~
include/meta/combinators.hpp:213:39: note: 'false' evaluates to false
include/meta/combinators.hpp: In instantiation of 'auto rcgp::MeshShadingCombinator::operator()(TaskShader&, MeshShader&, FragmentShader&) const [with TaskShader = rcgp::shader_stage<rcgp::ShaderStage::eTask, rcgp::TaskPayload<rcgp::vector<float, 3> >, rcgp::TaskGroup<1, 1, 1> >; MeshShader = rcgp::shader_stage<rcgp::ShaderStage::eMesh, rcgp::MeshletPayload<rcgp::MeshPrimitive::eTriangles, 64, 126, MeshOutputs>, rcgp::TaskPayload<rcgp::vector<float, 2> >, rcgp::WorkGroup<1, 1, 1> >; FragmentShader = rcgp::shader_stage<rcgp::ShaderStage::eFragment, rcgp::vector<float, 4>, rcgp::vector<float, 3> >]':
tests/compile/shader_modules/mesh_shading_combinator.cpp:64:4:   required from here
   60 |         auto pipeline = MeshShadingCombinator {
      |                         ~~~~~~~~~~~~~~~~~~~~~~~
   61 |                 .device = device,
      |                 ~~~~~~~~~~~~~~~~~
   62 |                 .compiler = compiler,
      |                 ~~~~~~~~~~~~~~~~~~~~~
   63 |                 .render_state = rs,
      |                 ~~~~~~~~~~~~~~~~~~~
   64 |         } (ts, ms, fs);
      |         ~~^~~~~~~~~~~~
include/meta/combinators.hpp:213:39: error: static assertion failed: mesh-shading combinator got incompatible task and mesh payloads:
    task shader emits: f32[3]
    mesh shader expects: f32[2]
  213 |                         static_assert(false, payload);
      |                                       ^~~~~
include/meta/combinators.hpp:213:39: note: 'false' evaluates to false
include/meta/combinators.hpp: In instantiation of 'auto rcgp::MeshShadingCombinator::operator()(TaskShader&, MeshShader&, FragmentShader&) const [with TaskShader = rcgp::shader_stage<rcgp::ShaderStage::eTask, rcgp::TaskPayload<rcgp::vector<float, 3> >, rcgp::TaskGroup<1, 1, 1> >; MeshShader = rcgp::shader_stage<rcgp::ShaderStage::eMesh, rcgp::MeshletPayload<rcgp::MeshPrimitive::eTriangles, 64, 126, MeshOutputs>, rcgp::TaskPayload<rcgp::vector<float, 3> >, rcgp::WorkGroup<1, 1, 1> >; FragmentShader = rcgp::shader_stage<rcgp::ShaderStage::eFragment, rcgp::vector<float, 4>, rcgp::vector<float, 2> >]':
tests/compile/shader_modules/mesh_shading_combinator.cpp:84:4:   required from here
   80 |         auto pipeline = MeshShadingCombinator {
      |                         ~~~~~~~~~~~~~~~~~~~~~~~
   81 |                 .device = device,
      |                 ~~~~~~~~~~~~~~~~~
   82 |                 .compiler = compiler,
      |                 ~~~~~~~~~~~~~~~~~~~~~
   83 |                 .render_state = rs,
      |                 ~~~~~~~~~~~~~~~~~~~
   84 |         } (ts, ms, fs);
      |         ~~^~~~~~~~~~~~
include/meta/combinators.hpp:217:39: error: static assertion failed: mesh-shading combinator got incompatible shader modules:
    mesh shader outputs: (f32[3])
    fragment shader inputs: (f32[2])
type mismatch in @0; mesh shader returns f32[3] while
fragment shader requires f32[2]
  217 |                         static_assert(false, io);
      |                                       ^~~~~
include/meta/combinators.hpp:217:39: note: 'false' evaluates to false
